--- a/package.json
+++ b/package.json
@@ -1,56 +1,48 @@
 {
-  "name": "studio-sample",
-  "version": "0.1.0",
+  "name": "kokutou",
   "private": true,
-  "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-fast-marquee": "^1.6.5",
-    "react-router-dom": "^7.6.2",
-    "react-scripts": "5.0.1",
-    "swiper": "^11.2.8",
-    "web-vitals": "^2.1.4"
-  },
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-router build",
+    "dev": "react-router dev",
+    "start": "react-router-serve ./build/server/index.js",
+    "typecheck": "react-router typegen && tsc"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "@react-router/node": "^7.5.3",
+    "@react-router/serve": "^7.5.3",
+    "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "draft-js": "^0.11.7",
+    "isbot": "^5.1.27",
+    "lucide-react": "^0.516.0",
+    "postcss": "^8.5.6",
+    "react": "^19.1.0",
+    "react-color": "^2.19.3",
+    "react-day-picker": "^9.7.0",
+    "react-dom": "^19.1.0",
+    "react-router": "^7.5.3",
+    "react-router-dom": "^7.6.2",
+    "setimmediate": "^1.0.5",
+    "swiper": "^11.2.8",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^5.4.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "postcss": "^8.5.4",
-    "prettier": "3.5.3",
-    "tailwindcss": "^3.4.17"
+    "@react-router/dev": "^7.5.3",
+    "@tailwindcss/vite": "^4.1.4",
+    "@types/draft-js": "^0.11.18",
+    "@types/node": "^20",
+    "@types/react": "^19.1.2",
+    "@types/react-color": "^3.0.13",
+    "@types/react-dom": "^19.1.2",
+    "prettier": "^3.6.0",
+    "tailwindcss": "^4.1.10",
+    "tw-animate-css": "^1.3.4",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.3",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
