--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "draft-js": "^0.11.7",
     "isbot": "^5.1.27",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.4",
+    "@types/d3": "^7.4.3",
     "@types/draft-js": "^0.11.18",
     "@types/node": "^20",
     "@types/react": "^19.1.2",
